--- a/tutorials/MapWithMarker/app/src/main/AndroidManifest.xml
+++ b/tutorials/MapWithMarker/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsMarkerActivity"
+            android:name=".MapsWithTileOverlayActivity"
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
